add claims
